--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -73,13 +73,14 @@
                             android:textSize="14sp" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal">
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
-                                android:layout_marginLeft="67dp"
+
                                 android:layout_marginTop="20dp"
                                 android:src="@drawable/small_round" />
 
@@ -139,7 +140,8 @@
                         app:cardBackgroundColor="#FFF4F4"
                         app:cardCornerRadius="10dp"
                         app:strokeColor="#FF0000"
-                        app:strokeWidth="1dp">
+                        app:strokeWidth="1dp"
+                        >
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -186,6 +188,8 @@
                                 app:boxStrokeWidthFocused="0dp"
                                 app:hintAnimationEnabled="false"
                                 app:hintEnabled="false"
+                                android:focusableInTouchMode="false"
+                                android:focusable="false"
                                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                                 app:endIconTint="@color/hint_color"
                                 >
@@ -337,6 +341,8 @@
                             app:boxStrokeWidthFocused="0dp"
                             app:hintAnimationEnabled="false"
                             app:hintEnabled="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                             app:endIconTint="@color/hint_color"
                             >
@@ -364,6 +370,8 @@
                             app:boxStrokeWidthFocused="0dp"
                             app:boxStrokeWidth="0dp"
                             app:hintEnabled="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             app:hintAnimationEnabled="false">
                             <com.google.android.material.textfield.TextInputEditText
