--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -147,7 +147,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:background="@drawable/edittext_bg"
+                            android:background="@drawable/all_spnner_bg"
                             android:padding="0dp"
                             app:boxStrokeWidth="0dp"
                             app:boxStrokeWidthFocused="0dp"
