--- a/app/src/main/res/layout/activity_account_wallet.xml
+++ b/app/src/main/res/layout/activity_account_wallet.xml
@@ -18,20 +18,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:paddingVertical="9dp"
-            app:menu="@menu/bottom_navigation"
-            app:labelVisibilityMode="labeled"
-            />
-    </RelativeLayout>
+<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:id="@+id/bottom_navigation"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:paddingVertical="9dp"-->
+<!--            app:menu="@menu/bottom_navigation"-->
+<!--            app:labelVisibilityMode="labeled"-->
+<!--            />-->
+<!--    </RelativeLayout>-->
 
 
 </LinearLayout>
