--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -505,6 +505,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                 <TextView
+                    android:id="@+id/virtualIndianAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#3A5FD8"
@@ -521,6 +522,7 @@
                     android:layout_marginTop="13dp"
                     />
                 <TextView
+                    android:id="@+id/wallet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Wallet"
@@ -537,6 +539,7 @@
                         android:layout_marginTop="13dp"
                         />
                     <TextView
+                        android:id="@+id/manageAddresses"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#3A5FD8"
