--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,148 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:orientation="vertical"
     tools:context=".UI.Orders.OrderActivity">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/toolBar"/>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/orderFrameLayout"
 
-        android:layout_below="@+id/toolBar"/>
+
+        <include
+            android:id="@+id/toolBar"
+            layout="@layout/toolbar" />
+
+
+    <FrameLayout
+        android:id="@+id/orderFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginBottom="5dp" />
 
     <LinearLayout
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:background="@color/hint_color"
-        >
+        android:gravity="bottom">
+
         <com.google.android.material.card.MaterialCardView
+
+            android:id="@+id/orderCard"
             android:layout_width="98dp"
             android:layout_height="match_parent"
-            app:cardElevation="0dp"
             app:cardCornerRadius="0dp"
-            android:id="@+id/orderCard">
+            app:cardElevation="0dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:padding="6dp">
+
                 <ImageView
+                    android:id="@+id/unselectedOrders"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_orders"
-                    android:id="@+id/unselectedOrders"/>
+                    android:src="@drawable/ic_orders" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Orders"
-                    android:textFontWeight="500"
                     android:textColor="@color/black"
-                    android:textSize="12sp"/>
+                    android:textFontWeight="500"
+                    android:textSize="12sp" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/lockerCard"
             android:layout_width="98dp"
             android:layout_height="match_parent"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="0dp"
-            android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:id="@+id/lockerCard">
+            android:layout_weight="1"
+            app:cardCornerRadius="0dp"
+            app:cardElevation="0dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:padding="6dp">
+
                 <ImageView
+                    android:id="@+id/unselectedLocker"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_locker"
-                    android:id="@+id/unselectedLocker"/>
+                    android:src="@drawable/ic_locker" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Locker"
-                    android:textFontWeight="500"
                     android:textColor="@color/black"
-                    android:textSize="12sp"/>
+                    android:textFontWeight="500"
+                    android:textSize="12sp" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/shipmentCard"
             android:layout_width="98dp"
             android:layout_height="match_parent"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="0dp"
-            android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:id="@+id/shipmentCard">
+            android:layout_weight="1"
+            app:cardCornerRadius="0dp"
+            app:cardElevation="0dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:padding="6dp">
+
                 <ImageView
+                    android:id="@+id/unselectedShipments"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_shipments"
-                    android:id="@+id/unselectedShipments"/>
+                    android:src="@drawable/ic_shipments" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Shipments"
-                    android:textFontWeight="500"
                     android:textColor="@color/black"
-                    android:textSize="12sp"/>
+                    android:textFontWeight="500"
+                    android:textSize="12sp" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/accountCard"
             android:layout_width="98dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:id="@+id/accountCard"
-            app:cardElevation="0dp"
             app:cardCornerRadius="0dp"
-            android:layout_marginLeft="5dp">
+            app:cardElevation="0dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:padding="6dp">
+
                 <ImageView
+                    android:id="@+id/unselectedAccount"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_account"
-                    android:id="@+id/unselectedAccount"/>
+                    android:src="@drawable/ic_account" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Account"
-                    android:textFontWeight="500"
                     android:textColor="@color/black"
-                    android:textSize="12sp"/>
+                    android:textFontWeight="500"
+                    android:textSize="12sp" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
 
-
-
-
-</RelativeLayout>
+</LinearLayout>
