Everything is done

--- a/app/src/main/res/layout/all_address_spinner.xml
+++ b/app/src/main/res/layout/all_address_spinner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:text="Title"
+    android:text="All Address"
 
     android:paddingLeft="10dp"
     android:paddingTop="5dp"
