--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -36,7 +36,8 @@
             android:layout_width="98dp"
             android:layout_height="match_parent"
             app:cardCornerRadius="0dp"
-            app:cardElevation="0dp">
+            app:cardElevation="0dp"
+            app:checkedIcon="@drawable/order_selector">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,11 +47,11 @@
                 android:padding="6dp">
 
                 <ImageView
-                    android:id="@+id/unselectedOrders"
+                    android:id="@+id/ordersImage"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_orders" />
+                    android:src="@drawable/ic_orders___selected" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -81,7 +82,7 @@
                 android:padding="6dp">
 
                 <ImageView
-                    android:id="@+id/unselectedLocker"
+                    android:id="@+id/lockerImage"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
@@ -116,7 +117,7 @@
                 android:padding="6dp">
 
                 <ImageView
-                    android:id="@+id/unselectedShipments"
+                    android:id="@+id/shipmentImage"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
@@ -151,7 +152,7 @@
                 android:padding="6dp">
 
                 <ImageView
-                    android:id="@+id/unselectedAccount"
+                    android:id="@+id/accountImage"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
