--- a/app/src/main/res/layout/fragment_add_adress.xml
+++ b/app/src/main/res/layout/fragment_add_adress.xml
@@ -37,6 +37,7 @@
 
 
                     <ImageView
+                        android:id="@+id/closeBtn"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_marginTop="26dp"
