--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_google_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginHorizontal="68dp"
         android:layout_marginTop="70dp"
         android:backgroundTint="#F3F6F9"
@@ -51,7 +51,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_fb_logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginHorizontal="68dp"
         android:layout_marginTop="30dp"
         android:backgroundTint="#F3F6F9"
