--- a/app/src/main/res/layout/fragment_fifth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fifth_on_boarding.xml
@@ -6,13 +6,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.OnBoarding.FifthOnBoarding">
 
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="17dp"
         android:layout_marginVertical="28dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp">
+        app:cardElevation="8dp"
+        android:background="@color/white">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,129 +28,116 @@
 
             <ImageView
                 android:id="@+id/back_arrow4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back_arrow"/>
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/back_arrow"
+                />
 
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="13dp"
+                app:cardCornerRadius="8dp"
+                android:layout_marginTop="23dp"
+                android:backgroundTint="#F4FDFF">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Your Indian Virtual Address"
+                        android:gravity="center_horizontal"
+                        android:background="#11B5D2"
+                        android:paddingTop="14dp"
+                        android:paddingBottom="13dp"
+                        android:textSize="20sp"
+                        android:textColor="@color/white"
+                        android:textFontWeight="700"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="21dp"
+                        android:textSize="18sp"
+                        android:textFontWeight="600"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nikita Shanker"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18sp"
+                        android:textFontWeight="500"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Address"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18sp"
+                        android:textFontWeight="600"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/locker_no_sa_29j17_122545_indian_shoppre_llp_182_1st_floor_2nd_cross_rd_7th_main_koramangala_1st_block_bengaluru_karnataka_560_034"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="17dp"
+                        android:layout_marginBottom="15dp"
+                        android:textSize="18sp"
+                        android:textFontWeight="500"
+                        android:textColor="@color/black"
+                        android:lineHeight="22dp"/>
+
+
+                </LinearLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="13dp"
-            app:cardCornerRadius="8dp"
-            android:layout_marginTop="50dp"
-            android:background="#F4FDFF">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Your Indian Virtual Address"
-                android:gravity="center_horizontal"
-                android:background="#11B5D2"
-                android:paddingHorizontal="33dp"
-                android:paddingTop="14dp"
-                android:paddingBottom="13dp"
-                android:textSize="20sp"
-                android:textColor="@color/white"
-                android:textFontWeight="700"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="21dp"
-                android:textSize="18sp"
-                android:textFontWeight="600"
-                android:textColor="@color/black"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nikita Shanker"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="10dp"
-                    android:textSize="18sp"
-                    android:textFontWeight="500"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Address"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="10dp"
-                    android:textSize="18sp"
-                    android:textFontWeight="600"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/locker_no_sa_29j17_122545_indian_shoppre_llp_182_1st_floor_2nd_cross_rd_7th_main_koramangala_1st_block_bengaluru_karnataka_560_034"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="17dp"
-                    android:layout_marginBottom="15dp"
-                    android:textSize="18sp"
-                    android:textFontWeight="500"
-                    android:textColor="@color/black"/>
-
-
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="49dp"
-                android:layout_marginTop="410dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginBottom="170dp"
-                android:gravity="center_horizontal|center_vertical"
+                android:layout_marginHorizontal="24dp"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
                 android:text="@string/use_this_address_to_shop_from_india"
-                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textFontWeight="700"
-                android:textSize="24sp"
+                android:textSize="23sp"
                 android:textStyle="bold" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/startShoppingBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="25dp"
-                android:layout_marginBottom="47dp"
+                android:letterSpacing="0.03"
+                android:layout_marginVertical="20dp"
                 android:backgroundTint="@color/button_color"
                 android:paddingTop="13dp"
                 android:paddingBottom="14dp"
                 android:text="Start shopping"
                 android:textFontWeight="700"
                 android:textSize="24dp"
-                android:textStyle="bold"
                 app:cornerRadius="5dp" />
 
-        </RelativeLayout>
-
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 
 </FrameLayout>
