--- a/app/src/main/res/layout/fragment_first_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_first_on_boarding.xml
@@ -6,16 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.OnBoarding.FirstOnBoarding">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="17dp"
         android:layout_marginVertical="28dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
 
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
         <TextView
             android:id="@+id/skip1"
             android:layout_width="wrap_content"
@@ -27,27 +34,21 @@
             android:textColor="@color/skipcolor"
             android:textSize="14sp" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="436dp"
                 android:src="@drawable/onboarding1" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
                 android:layout_marginStart="49dp"
-                android:layout_marginTop="410dp"
+                android:layout_marginTop="-80dp"
                 android:layout_marginEnd="50dp"
                 android:textStyle="bold"
-                android:layout_marginBottom="170dp"
+
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/get_a_unique_indian_virtual_address_to_shop"
                 android:textAlignment="center"
@@ -59,13 +60,10 @@
                 android:id="@+id/next_btn_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="47dp"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginVertical="20dp"
                 android:backgroundTint="@color/button_color"
-                android:paddingTop="13dp"
-                android:paddingBottom="14dp"
+                android:paddingVertical="13dp"
                 android:text="Next"
                 android:textFontWeight="700"
                 android:textSize="24dp"
@@ -75,8 +73,8 @@
                 app:iconGravity="textEnd"
                 app:iconSize="24dp" />
 
-        </RelativeLayout>
 
+</LinearLayout>
     </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
 </FrameLayout>
