--- a/app/src/main/res/layout/fragment_secound_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_secound_on_boarding.xml
@@ -6,13 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.OnBoarding.SecoundOnBoarding">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="17dp"
         android:layout_marginVertical="28dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -21,9 +29,10 @@
 
     <ImageView
         android:id="@+id/back_arrow1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/back_arrow"/>
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/back_arrow"
+        />
 
 
         <TextView
@@ -38,29 +47,20 @@
 
 </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <ImageView
                 android:layout_width="318dp"
                 android:layout_height="318dp"
-                android:layout_marginTop="52dp"
-                android:layout_marginHorizontal="31dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="22dp"
                 android:src="@mipmap/img" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="46dp"
-                android:layout_marginTop="343dp"
-                android:layout_marginEnd="47dp"
-                android:layout_marginBottom="156dp"
-                android:gravity="center_horizontal|center_vertical"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal"
                 android:text="@string/shop_from_1000_indian_websites_get_it_delivered_to_your_virtual_address"
                 android:textAlignment="center"
                 android:textColor="@color/black"
@@ -72,11 +72,8 @@
                 android:id="@+id/next_btn_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="47dp"
-                android:layout_marginTop="343dp"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginVertical="20dp"
                 android:backgroundTint="@color/button_color"
                 android:paddingTop="13dp"
                 android:paddingBottom="14dp"
@@ -89,8 +86,8 @@
                 app:iconGravity="textEnd"
                 app:iconSize="24dp" />
 
-        </RelativeLayout>
 
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
 </FrameLayout>
