--- a/app/src/main/res/layout/fragment_third_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_third_on_boarding.xml
@@ -5,14 +5,22 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.OnBoarding.ThirdOnBoarding">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="17dp"
         android:layout_marginVertical="28dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -21,9 +29,9 @@
 
             <ImageView
                 android:id="@+id/back_arrow2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back_arrow"/>
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/back_arrow" />
 
 
             <TextView
@@ -42,18 +50,15 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="436dp"
+                android:layout_gravity="center_horizontal"
                 android:src="@drawable/onboarding3"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="69dp"
-            android:layout_marginTop="450dp"
-            android:layout_marginEnd="71dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="-40dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/we_ll_consolidate_ship_it_to_you"
             android:textAlignment="center"
@@ -62,9 +67,7 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+
 
 
 
@@ -72,11 +75,8 @@
                 android:id="@+id/next_btn_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="63dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="47dp"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginVertical="20dp"
                 android:backgroundTint="@color/button_color"
                 android:paddingTop="13dp"
                 android:paddingBottom="14dp"
@@ -89,8 +89,8 @@
                 app:iconGravity="textEnd"
                 app:iconSize="24dp" />
 
-        </RelativeLayout>
 
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
 </FrameLayout>
