--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UI.SignupLogin.ResetPassword">
+    tools:context=".UI.SignupLogin.ResetPassword"
+    android:background="@color/white">
 
     <ScrollView
         android:layout_width="match_parent"
