--- a/app/src/main/res/layout/fragment_fifth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fifth_on_boarding.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="13dp"
                 app:cardCornerRadius="8dp"
+                app:cardElevation="0dp"
                 android:layout_marginTop="23dp"
                 android:backgroundTint="#F4FDFF">
 
