--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -60,17 +60,33 @@
                             android:textFontWeight="700"
                             android:textSize="14sp" />
 
-                        <TextView
-                            android:id="@+id/lockerNo"
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
                             android:layout_marginTop="14dp"
-                            android:layout_gravity="center_horizontal"
-                            android:text="Locker No.: SA-976-6767"
-                            android:textColor="@color/black"
-                            android:textFontWeight="600"
-                            android:textSize="14sp" />
+                            android:layout_gravity="center_horizontal">
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+
+
+                                android:text="Locker No.: "
+                                android:textColor="@color/black"
+                                android:textFontWeight="600"
+                                android:textSize="14sp" />
+                            <TextView
+                                android:id="@+id/lockerNo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+
+
+                                android:text="SA-976-6767"
+                                android:textColor="@color/black"
+                                android:textFontWeight="600"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+
 
                         <LinearLayout
                             android:layout_width="wrap_content"
